fixes FeaturedUpdate button overflow

--- a/src/scss/General.scss
+++ b/src/scss/General.scss
@@ -43,6 +43,7 @@ a {
   border-radius: 5px;
   transition: all 0.1s;
 
+  box-sizing: border-box;
   text-align: center;
   color: $white;
   border: none;
